--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
     "gulp-uglify": "^2.1.2",
-    "gulp-util": "^3.0.8"
+    "gulp-util": "^3.0.8",
+    "karma": "^1.7.0"
   }
 }
