--- a/package.json
+++ b/package.json
@@ -30,12 +30,7 @@
     "mocha": "^3.3.0"
   },
   "devDependencies": {
-    "del": "^2.2.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-minify-html": "^1.0.6",
-    "gulp-uglify": "^2.1.2",
-    "gulp-util": "^3.0.8",
+    "chai": "^3.5.0",
     "karma": "^1.7.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.1.1",
