--- a/package.json
+++ b/package.json
@@ -21,13 +21,7 @@
   },
   "homepage": "https://github.com/ULL-ESIT-DSI-1617/eliminando-switch-smell-edna-joseluis-kevin-35l2v3#readme",
   "dependencies": {
-    "chai": "^3.5.0",
-    "express": "^4.15.2",
-    "gulp": "^3.9.1",
-    "gulp-shell": "^0.6.3",
-    "karma": "^1.7.0",
-    "karma-mocha": "^1.3.0",
-    "mocha": "^3.3.0"
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
